[gd_scene load_steps=9 format=2]

[ext_resource path="res://ChallengeGame/WonGUI/wonGUI.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/titanOneRegular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Textures/homeButton.png" type="Texture" id=3]
[ext_resource path="res://Resources/Textures/playTriangle.png" type="Texture" id=4]
[ext_resource path="res://Resources/Textures/diamondIcon.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80
shadow_color = Color( 1, 1, 1, 0.196078 )
shadow_size = 20

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 2 )

[node name="wonGUICanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="wonGUIMain" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.0
margin_top = 600.0
margin_right = 350.0
margin_bottom = 1300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wonGUIPanel" type="Panel" parent="wonGUIMain"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vSplitter" type="VBoxContainer" parent="wonGUIMain"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelLabelMargin" type="MarginContainer" parent="wonGUIMain/vSplitter"]
margin_right = 700.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="levelLabel" type="Label" parent="wonGUIMain/vSplitter/levelLabelMargin"]
margin_right = 700.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "LEVEL 1
COMPLETED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diamondsInfo" type="Control" parent="wonGUIMain/vSplitter"]
margin_top = 234.0
margin_right = 700.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="diamondTextureMargin" type="MarginContainer" parent="wonGUIMain/vSplitter/diamondsInfo"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -115.0
margin_right = 230.0
margin_bottom = 115.0
custom_constants/margin_right = 20
custom_constants/margin_top = 50
custom_constants/margin_left = 70
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diamondTexture" type="TextureRect" parent="wonGUIMain/vSplitter/diamondsInfo/diamondTextureMargin"]
margin_left = 70.0
margin_top = 50.0
margin_right = 210.0
margin_bottom = 180.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labelMargin" type="MarginContainer" parent="wonGUIMain/vSplitter/diamondsInfo"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -470.0
margin_top = -115.0
margin_bottom = 115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diamondLabel" type="Label" parent="wonGUIMain/vSplitter/diamondsInfo/labelMargin"]
margin_right = 470.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
valign = 1

[node name="hSplitter" type="HBoxContainer" parent="wonGUIMain/vSplitter"]
margin_top = 468.0
margin_right = 700.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="homeButtonContainer" type="MarginContainer" parent="wonGUIMain/vSplitter/hSplitter"]
margin_right = 348.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 0
custom_constants/margin_bottom = 50

[node name="homeButton" type="TextureButton" parent="wonGUIMain/vSplitter/hSplitter/homeButtonContainer"]
margin_right = 348.0
margin_bottom = 182.0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="nextLevelButtonContainer" type="MarginContainer" parent="wonGUIMain/vSplitter/hSplitter"]
margin_left = 352.0
margin_right = 700.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_bottom = 50

[node name="nextLevelButton" type="TextureButton" parent="wonGUIMain/vSplitter/hSplitter/nextLevelButtonContainer"]
margin_right = 348.0
margin_bottom = 182.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="wonGUITween" type="Tween" parent="."]

[connection signal="pressed" from="wonGUIMain/vSplitter/hSplitter/homeButtonContainer/homeButton" to="." method="_on_homeButton_pressed"]
[connection signal="pressed" from="wonGUIMain/vSplitter/hSplitter/nextLevelButtonContainer/nextLevelButton" to="." method="_on_nextLevelButton_pressed"]
